<resources>
    <string name="app_name">SugarMovilApp</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Buscar...</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="ok">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="prompt_name">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="header_login">INICIAR SESIÓN</string>
    <string name="action_sign_in_email_login">INGRESAR</string>
    <string name="error_field_required">Campo requerido*</string>
    <string name="login_message">Iniciando CRM Laumayer</string>
    <string name="title_info">INFORMACIÓN GENERAL</string>
    <string name="title_info_create">INGRESO DE DATOS</string>
    <string name="profile_image">Perfil</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_select_account">SELECCIONAR CUENTA</string>
    <string name="title_activity_select_contact">SELECCIONAR CONTACTO</string>
    <string name="title_activity_select_oppotunity">SELECCIONAR OPORTUNIDAD</string>
    <string name="title_activity_select_task">SELECCIONAR TAREA</string>
    <string name="title_activity_select_call">SELECCIONAR LLAMADA</string>
    <string name="title_activity_select_lead">SELECCIONAR CLIENTE</string>
    <string name="title_activity_select_user">SELECCIONAR USUARIO</string>
    <string name="title_activity_select_campaign">SELECCIONAR CAMPAÑA</string>
    <string name="title_activity_account">CUENTA</string>
    <string name="title_activity_create_account">CREAR CUENTA</string>
    <string name="title_activity_edit_account">EDITAR CUENTA</string>
    <string name="title_dialog_account">Seleccinar Cuenta</string>
    <string name="cuenta_titulo_informacion">INFORMACIÓN GENERAL</string>
    <string name="cuenta_razon">Razón Social:</string>
    <string name="cuenta_nit">Nit:</string>
    <string name="cuenta_codigo">Código alterno:</string>
    <string name="cuenta_canal">Canal:</string>
    <string name="cuenta_sector">Sector:</string>
    <string name="cuenta_clase">Clase:</string>
    <string name="cuenta_tel1">Teléfono 1:</string>
    <string name="cuenta_ext1">Extensión 1:</string>
    <string name="cuenta_tel2">Teléfono 2:</string>
    <string name="cuenta_ext2">Extensión 2:</string>
    <string name="cuenta_celular">Celular:</string>
    <string name="cuenta_fax">Fax:</string>
    <string name="cuenta_direccion">Dirección:</string>
    <string name="cuenta_municipio">Municipio:</string>
    <string name="cuenta_departamento">Departamento:</string>
    <string name="cuenta_zona">Zona:</string>
    <string name="cuenta_uen">UEN:</string>
    <string name="cuenta_email">Email:</string>
    <string name="cuenta_web">Web:</string>
    <string name="cuenta_grupo">Grupo:</string>
    <string name="cuenta_segmento">Segmento:</string>
    <string name="cuenta_estado">Estado:</string>
    <string name="cuenta_descuento">Descuento Comercial 1:</string>
    <string name="cuenta_descuento2">Descuento Comercial 2:</string>
    <string name="cuenta_presupuesto">Presupuesto:</string>
    <string name="cuenta_descripcion">Descripción:</string>
    <string name="cuenta_transporte">C. Transporte:</string>
    <string name="cuenta_creado">Creado:</string>
    <string name="cuenta_usuario">Usuario:</string>
    <string name="cuenta_titulo_segmentacion">SEGMENTACIÓN CLIENTES</string>
    <string name="cuenta_constitucion">Constitución:</string>
    <string name="cuenta_actual">Ventas año actual:</string>
    <string name="cuenta_anterior">Ventas año anterior:</string>
    <string name="cuenta_pasivo_actual">Pasivos año actual:</string>
    <string name="cuenta_pasivo_anterior">Pasivos año anterior:</string>
    <string name="cuenta_activo_actual">Activos Año actual:</string>
    <string name="cuenta_activo_anterior">Activos Año anterior:</string>
    <string name="cuenta_numero_alianzas"># Alianzas:</string>
    <string name="cuenta_alianzas">Alianzas:</string>
    <string name="cuenta_origen">Origen:</string>
    <string name="cuenta_titulo_estado_facturacion">ESTADO FACTURACIÓN</string>
    <string name="cuenta_fecha">Fecha:</string>
    <string name="cuenta_diaria">Diaria:</string>
    <string name="cuenta_acumulada">Acumulada:</string>
    <string name="cuenta_cumplimiento">Cumplimiento:</string>
    <string name="cuenta_autorizada">Autorizada:</string>
    <string name="cuenta_numero_autorizada">No. Autorizada:</string>
    <string name="cuenta_titulo_despachos_realizados">DESPACHOS REALIZADOS</string>
    <string name="cuenta_fecha_despacho">Fecha:</string>
    <string name="cuenta_remesa"># Remesa:</string>
    <string name="cuenta_destino">Destino:</string>
    <string name="cuenta_destinatario">Destinatario:</string>
    <string name="cuenta_unidades"># Unidades:</string>
    <string name="cuenta_documentos"># Documentos:</string>
    <string name="cuenta_titulo_pendientes_enviar">PENDIENTES POR ENVIAR</string>
    <string name="cuenta_destinatario_pendientes">Destinatario:</string>
    <string name="cuenta_destino_pendientes">Destino:</string>
    <string name="cuenta_motivo">Motivo:</string>
    <string name="cuenta_titulo_cartera">INFORMACIÓN DE CARTERA</string>
    <string name="cuenta_cupo">Cupo Disponible:</string>
    <string name="cuenta_cupo_cr">Cupo CR:</string>
    <string name="cuenta_total">Total Cartera:</string>
    <string name="cuenta_condicion">Condición Pago:</string>
    <string name="cuenta_plazo">Plazo Pago:</string>
    <string name="cuenta_promedio">Promedio Pago:</string>
    <string name="cuenta_vencida">Cartera Vencida:</string>
    <string name="cuenta_a_vencer">Cartera a Vencer:</string>
    <string name="cuenta_titulo_estrategia">INFORMACIÓN ESTRATEGIAS</string>
    <string name="cuenta_titulo_est_anuales">ESTRATEGIAS ANUALES</string>
    <string name="cuenta_titulo_est_desc_ad">DESCUENTOS ADICIONALES</string>
    <string name="cuenta_titulo_est_especiales">ESTRATEGIAS ESPECIALES DE ATENCION</string>
    <string name="cuenta_titulo_est_mercadeo">ESTRATEGIAS DE MERCADEO</string>
    <string name="cuenta_moeller">Autom. Moeller</string>
    <string name="cuenta_enerlux">Enerlux</string>
    <string name="cuenta_delta">Delta 1</string>
    <string name="cuenta_delta2">Delta 2</string>
    <string name="cuenta_dkc">DKC 1</string>
    <string name="cuenta_dkc2">DKC 2</string>
    <string name="cuenta_leviton">Leviton WID</string>
    <string name="cuenta_barras">Barras Flexibles</string>
    <string name="cuenta_vcai">W-VCAI</string>
    <string name="cuenta_wohner">Wohner</string>
    <string name="cuenta_lp">Comun. LP Dolares</string>
    <string name="cuenta_eaton">Maniobra EATON</string>
    <string name="cuenta_minieaton">Minibreaker EATON</string>
    <string name="cuenta_mandoeaton">Señal. y Mando EATON</string>
    <string name="cuenta_xenergy">OEM Xenergy</string>
    <string name="cuenta_min_eaton">Precios Minimos EATON</string>
    <string name="cuenta_netos">Precios Netos Lovato</string>
    <string name="cuenta_desc_ad">Desc. Adicional:</string>
    <string name="cuenta_bono_especial">Bonos Especiales</string>
    <string name="cuenta_meta_anual">Meta Anual:</string>
    <string name="cuenta_meta_tri">Meta Trimestral:</string>
    <string name="cuenta_meta_bi">Meta Bimensual:</string>
    <string name="cuenta_meta_me">Meta Mensual:</string>
    <string name="cuenta_por_bon_anual">% Bonificacion Anual:</string>
    <string name="cuenta_por_bon_bi_eaton">% Bonificacion Bimestral Eaton:</string>
    <string name="cuenta_por_bon_valor">Valor Bono:</string>
    <string name="cuenta_por_bon_bim">% Bimensual:</string>
    <string name="cuenta_por_bon_bi_leviton">% Bonificacion Bimestral Leviton:</string>
    <string name="cuenta_por_bon_tri">% Bonificacion Trimestral:</string>
    <string name="cuenta_por_bon_compra">Bonificacion por Compra</string>
    <string name="cuenta_por_bon_eaton">Maniobra Eaton</string>
    <string name="cuenta_por_bon_leviton">Señalizacion y Mando Eaton</string>
    <string name="cuenta_por_man_lovato">Maniobra Lovato</string>
    <string name="cuenta_por_bon_flexible">Bonificacion Flexible Eaton</string>
    <string name="cuenta_desp_rem">Des Remsion x Cierre</string>
    <string name="cuenta_no_cobro">No Cobro Anticipo</string>
    <string name="cuenta_estrategia1">Estrategia 1:</string>
    <string name="cuenta_estrategia2">Estrategia 2:</string>
    <string name="cuenta_estrategia3">Estrategia 3:</string>
    <string name="cuenta_estrategia4">Estrategia 4:</string>
    <string name="cuenta_exh">Exhibidor:</string>
    <string name="cuenta_entrega_exh1">Entrega Exhibidor 1:</string>
    <string name="cuenta_entrega_exh2">Entrega Exhibidor 2:</string>
    <string name="cuenta_entrega_exh3">Entrega Exhibidor 3:</string>
    <string name="cuenta_acta_entrega">Acta Entrega:</string>
    <string name="cuenta_imagen">Imagen:</string>
    <string name="cuenta_laumayer">Laumayer Apoya tu Empresa:</string>
    <string name="cuenta_entrega1">Entrega 1:</string>
    <string name="cuenta_entrega2">Entrega 2:</string>
    <string name="cuenta_pieza1">Pieza 1:</string>
    <string name="cuenta_pieza2">Pieza 2:</string>
    <string name="cuenta_dia_marca">Día de la Marca:</string>
    <string name="cuenta_fecha_marca">Fecha Día de la Marca:</string>
    <string name="cuenta_placa_aniv">Placa Aniversario:</string>
    <string name="cuenta_fecha_placa">Fecha Placa:</string>
    <string name="cuenta_cert">Certificaciones:</string>
    <string name="cuenta_otras_estrat">Otras Estrategias:</string>
    <string name="title_activity_contact">CONTACTO</string>
    <string name="title_activity_create_contact">CREAR CONTACTO</string>
    <string name="title_activity_edit_contact">EDITAR CONTACTO</string>
    <string name="contacto_titulo_vision">VISIÓN GENERAL</string>
    <string name="contacto_contacto">Contacto:</string>
    <string name="contacto_identificacion">Identificación:</string>
    <string name="contacto_cumpleanos">Cumpleaños:</string>
    <string name="contacto_genero">Genero:</string>
    <string name="contacto_cargo">Cargo:</string>
    <string name="contacto_certificaciones">Certificaciones:</string>
    <string name="contacto_profesion">Profesión:</string>
    <string name="contacto_tipo">Tipo:</string>
    <string name="contacto_tel1">Teléfono 1:</string>
    <string name="contacto_ext1">Extensión 1:</string>
    <string name="contacto_tel2">Teléfono 2:</string>
    <string name="contacto_ext2">Extensión 2:</string>
    <string name="contacto_celular">Celular:</string>
    <string name="contacto_fax">Tel Fax:</string>
    <string name="contacto_email">Email:</string>
    <string name="contacto_cuenta">Cuenta:</string>
    <string name="contacto_departamento">Departamento:</string>
    <string name="contacto_municipio">Municipio:</string>
    <string name="contacto_direccion">Dirección:</string>
    <string name="contacto_titulo_datos">DATOS DEL CLIENTE</string>
    <string name="contacto_segmento">Segmento:</string>
    <string name="contacto_grupo">Grupo Objetivo:</string>
    <string name="contacto_uen">UEN:</string>
    <string name="contacto_zona">Zona:</string>
    <string name="contacto_canal">Canal:</string>
    <string name="contacto_sector">Sector:</string>
    <string name="contacto_estado">Estado cliente:</string>
    <string name="contacto_titulo_regalos">REGALOS</string>
    <string name="contacto_regalo1">Regalo 1:</string>
</resources>