<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible"
        tools:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            fontPath="fonts/DaxlinePro-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_color"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

    <!-- Login form -->
    <ScrollView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:fillViewport="true"
        android:minHeight="450dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:gravity="top"
                android:minHeight="450dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ic_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/profile_image"
                    android:padding="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo" />

                <EditText
                    android:id="@+id/text_user"
                    fontPath="fonts/DaxlinePro-Regular.ttf"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="80dp"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:hint="@string/prompt_name"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:id="@+id/text_password"
                    fontPath="fonts/DaxlinePro-Regular.ttf"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix" />

                <Button
                    android:id="@+id/login_button"
                    fontPath="fonts/DaxlinePro-Regular.ttf"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/btn_login_color"
                    android:text="@string/action_sign_in_email_login"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</merge>