<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">
    
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentTop="false"
	    android:layout_centerInParent="false"
	    android:gravity="center"
	    android:orientation="vertical">
    
            <LinearLayout
                android:id="@+id/layout_contenido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:background="@color/list_background_white"
                android:orientation="vertical">

                <TextView
                    fontPath="fonts/DaxlinePro-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/cuenta_titulo_est_desc_ad"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/crm_gray"
                    android:textSize="20sp"
                    tools:ignore="MissingPrefix" />
                
      			<View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#d1d3d4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
					
                    <CheckBox
                        android:id="@+id/checkbox_moeller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/cuenta_moeller" />

                    <TextView
      
                        fontPath="fonts/DaxlinePro-Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:singleLine="false"
                        android:text="@string/cuenta_desc_ad"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/valor_desc_ad_1"
                        fontPath="fonts/DaxlinePro-Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:singleLine="false"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
					 <CheckBox android:id="@+id/checkbox_enerlux"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:clickable="false"
					        android:text="@string/cuenta_enerlux"/>
                    <TextView
          
                        fontPath="fonts/DaxlinePro-Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:singleLine="false"
                        android:text="@string/cuenta_nit"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/valor_desc_ad_2"
                        fontPath="fonts/DaxlinePro-Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:singleLine="false"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>

                <TextView
                    fontPath="fonts/DaxlinePro-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/cuenta_titulo_est_anuales"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/crm_gray"
                    android:textSize="20sp"
                    tools:ignore="MissingPrefix" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#d1d3d4" />
                
				 <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
					 <CheckBox android:id="@+id/checkbox_delta"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:clickable="false"
					        android:text="@string/cuenta_delta"/>
                    <TextView
          
                        fontPath="fonts/DaxlinePro-Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:singleLine="false"
                        android:text="@string/cuenta_desc_ad"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/valor_desc_ad_3"
                        fontPath="fonts/DaxlinePro-Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:singleLine="false"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>
               

                   
     </LinearLayout>
     
     </ScrollView>
    
</RelativeLayout>
